fixed all breaks

--- a/frontend/app/auth/log-in.html
+++ b/frontend/app/auth/log-in.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CoinHarbor Capital || Login</title>
-    <link rel="icon" sizes="32x32" href="../../assets/images/appfavicon.png" />
-    <link rel="stylesheet" href="../../assets/css/reset.css" />
-    <link rel="stylesheet" href="../../assets/css/normalize.css" />
-    <link rel="stylesheet" href="../../assets/css/auth/log-in.css" />
+    <link rel="icon" sizes="32x32" href="/images/appfavicon.png" />
+    <link rel="stylesheet" href="/css/reset.css" />
+    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" href="/css/auth/log-in.css" />
   </head>
   <body>
     <main>
@@ -32,7 +32,7 @@
       </form>
       <p class="auth-action">
         Don't have an account?
-        <a href="sign-up.html"
+        <a href="/signup"
           ><span style="color: var(--color-accent)">Sign-up</span></a
         >
       </p>
