--- a/frontend/app/auth/sign-up.html
+++ b/frontend/app/auth/sign-up.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CoinHarbor Capital || Sign-up</title>
-    <link rel="icon" sizes="32x32" href="../../assets/images/appfavicon.png" />
-    <link rel="stylesheet" href="../../assets/css/auth/sign-up.css" />
-    <link rel="stylesheet" href="../../assets/css/styles.css" />
+    <link rel="icon" sizes="32x32" href="/images/appfavicon.png" />
+    <link rel="stylesheet" href="/css/auth/sign-up.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <link
       rel="stylesheet"
       type="text/css"
-      href="../../assets/icons/css/all.css"
+      href="/icons/css/all.css"
     />
   </head>
   <body>
@@ -55,7 +55,7 @@
 
       <p class="auth-action">
         Have an account?
-        <a href="log-in.html"
+        <a href="/login"
           ><span style="color: var(--color-accent)">Log-in</span></a
         >
       </p>
