--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -58,9 +58,9 @@
     <div class="txt">
       <h4><span>D</span>ashboard</h4>
     </div>
-    <img src="/images/png/beta.png" class="profile-enabler" data-id="profile-enabler" />
+    <img src="/images/png/btc.png" class="profile-enabler" data-id="profile-enabler" />
     <div class="user-info-basic js-user-info-basic hidden" data-id="user-info-basic">
-      <img class="profile-pic" src="/images/png/aave.png" />
+      <img class="profile-pic" src="/images/png/sol.png" />
       <div>
         <p class="username">John Doe</p>
         <p class="usertype">Basic</p>
@@ -74,6 +74,14 @@
   <!--Navigation Bar-->
 
   <section class="nav-section js-nav-section hidden" data-id="nav-section">
+              <div class="popup-background" style="
+                height: 100%;
+                width: 100%;
+                position: fixed;
+                background-color: black;
+                opacity: 0.5;
+                z-index: -1;
+              "></div>
     <i class="fa-light fa-xmark fa-2xl" id="menu-close-icon" data-id="menu-close-icon"></i>
     <nav>
       <a href="#">
@@ -100,11 +108,11 @@
         <i class="fa-solid fa-user-gear"></i>
         <p>User settings</p>
       </a>
-      <a href="auth/log-in.html">
+      <a href="/login">
         <i class="fas fa-sign-out"></i>
         <p>Log Out</p>
       </a>
-      <a href="auth/lock-screen.html">
+      <a href="/secure">
         <i class="fas fa-lock"></i>
         <p>Lock App</p>
       </a>
