--- a/frontend/app/auth/lock-screen.html
+++ b/frontend/app/auth/lock-screen.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Locked</title>
-    <link rel="icon" sizes="100x100" href="../../assets/images/appfavicon.png"/>
-    <link rel="stylesheet" type="text/css" href="../../assets/css/auth/lock-screen.css"/>
-    <link rel="stylesheet" type="text/css" href="../../assets/icons/css/all.css"/>
+    <link rel="icon" sizes="100x100" href="/images/appfavicon.png"/>
+    <link rel="stylesheet" type="text/css" href="/css/auth/lock-screen.css"/>
+    <link rel="stylesheet" type="text/css" href="/icons/css/all.css"/>
 </head>
 <body>
     <i class="fas fa-lock" id="lock-icon"></i>
 
     <main>
         
-            <img class="profile-pic" src="../../assets/images/svg/aeon.svg" alt="profile-picture">
+            <img class="profile-pic" src="/images/svg/aeon.svg" alt="profile-picture">
             <h3>Locked</h3>
             <form method="post" >
                 <h4>Please enter your password to access your dashboard!</h4>
@@ -23,6 +23,6 @@
             </form>
         
     </main>
-    <script src="../../assets/js/auth.js"></script>
+    <script src="/js/auth.js"></script>
 </body>
 </html>
