--- a/frontend/app/auth/password-recovery.html
+++ b/frontend/app/auth/password-recovery.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CoinHarbor Capital || Reset Password</title>
-    <link rel="icon" sizes="32x32" href="../../assets/images/appfavicon.png"/>
-    <link rel="stylesheet" href="assets/css/reset.css" />
-    <link rel="stylesheet" href="assets/css/normalize.css" />
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="icon" sizes="32x32" href="/images/appfavicon.png"/>
+    <link rel="stylesheet" href="/css/reset.css" />
+    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
 </head>
 <body>
     
