--- a/frontend/index.html
+++ b/frontend/index.html
@@ -88,7 +88,7 @@
   </header>
 
   <!-- Why coinHarbor -->
-  <section class="why-cro">
+  <section class="why-crappo">
     <!-- Media Objects -->
     <div class="media-container">
       <div class="media">
